--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,61 @@
+absl-py==2.0.0
 asgiref==3.7.2
-Django==4.2.5
+certifi==2023.7.22
+charset-normalizer==3.3.0
+chex==0.1.85
+click==8.1.7
+colorama==0.4.6
+Django==5.0
+etils==1.5.2
+filelock==3.12.4
+flax==0.7.5
+fsspec==2023.9.2
+huggingface-hub==0.20.2
+idna==3.4
+importlib-resources==6.1.1
+jax==0.4.21
+jaxlib==0.4.21
+Jinja2==3.1.3
+joblib==1.3.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+mdurl==0.1.2
+ml-dtypes==0.3.1
+mpmath==1.3.0
+msgpack==1.0.7
+nest-asyncio==1.5.8
+networkx==3.0rc1
+nltk==3.8.1
+numpy==1.26.2
+opt-einsum==3.3.0
+optax==0.1.7
+orbax-checkpoint==0.4.4
+packaging==23.2
+Pillow==10.1.0
+protobuf==4.25.1
+Pygments==2.17.2
+PyPDF2==3.0.2
+PyYAML==6.0.1
+regex==2023.10.3
+requests==2.31.0
+rich==13.7.0
+sacremoses==0.0.53
+safetensors==0.4.1
+scipy==1.11.4
+sentencepiece==0.1.99
+setuptools==69.0.2
+six==1.16.0
 sqlparse==0.4.4
-typing_extensions>=4.8.0
+sympy==1.12
+tensorstore==0.1.51
+tokenizers==0.15.0
+toolz==0.12.0
+torch==2.2.0.dev20231205+cpu
+torchaudio==2.2.0.dev20231205+cpu
+torchvision==0.17.0.dev20231205+cpu
+tqdm==4.66.1
+transformers==4.36.0
+typing_extensions==4.8.0
 tzdata==2023.3
+urllib3==1.26.18
+zipp==3.17.0
