--- a/requirements.txt
+++ b/requirements.txt
@@ -54,7 +54,7 @@ torch==2.2.0.dev20231205+cpu
 torchaudio==2.2.0.dev20231205+cpu
 torchvision==0.17.0.dev20231205+cpu
 tqdm==4.66.1
-transformers==4.36.0
+transformers>=4.36.0
 typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==1.26.18
