--- a/requirements.txt
+++ b/requirements.txt
@@ -1,77 +1,79 @@
-absl-py==2.1.0
-asgiref==3.7.2
-beautifulsoup4==4.12.3
-certifi==2023.11.17
-charset-normalizer==3.3.2
-chex==0.1.85
-click==8.1.7
-colorama==0.4.6
-contourpy==1.2.0
-cycler==0.12.1
-distlib==0.3.8
-Django==4.2.11
-etils==1.6.0
-filelock==3.13.1
-flax==0.8.0
-fonttools==4.47.2
-fsspec==2023.12.2
-huggingface-hub==0.20.3
-idna==3.6
-importlib-resources==6.1.1
-jax==0.4.23
-jaxlib==0.4.23
-Jinja2==3.1.3
-joblib==1.3.2
-kiwisolver==1.4.5
-markdown-it-py==3.0.0
-MarkupSafe==2.1.4
-matplotlib==3.8.2
-mdurl==0.1.2
-ml-dtypes==0.3.2
-mpmath==1.3.0
-msgpack==1.0.7
-nest-asyncio==1.6.0
-networkx==3.2.1
-nltk==3.8.1
-numpy==1.26.3
-opt-einsum==3.3.0
-optax==0.1.8
-orbax-checkpoint==0.5.2
-packaging==23.2
-pandas==2.2.0
-pillow==10.2.0
-pipenv==2023.11.17
-platformdirs==4.1.0
-protobuf==4.25.2
-Pygments==2.17.2
-pyparsing==3.1.1
-PyPDF2==3.0.1
-python-dateutil==2.8.2
-pytz==2023.3.post1
-PyYAML==6.0.1
-regex==2023.12.25
-requests==2.31.0
-rich==13.7.0
-sacremoses==0.1.1
-safetensors==0.4.2
-scipy==1.12.0
-sentencepiece==0.1.99
-setuptools==69.0.3
-six==1.16.0
-soupsieve==2.5
-sqlparse==0.4.4
-sympy==1.12
-tensorstore==0.1.52
-tokenizers==0.15.1
-toolz==0.12.1
-torch==2.2.0.dev20231204+cu118
-torchaudio==2.2.0.dev20231204+cu118
-torchvision==0.17.0.dev20231204+cu118
-tqdm==4.66.1
-transformers==4.37.1
-typing_extensions==4.9.0
-tzdata==2023.4
-urllib3==2.1.0
-virtualenv==20.25.0
-wheel==0.42.0
-zipp==3.17.0
+absl-py>=2.1.0
+asgiref>=3.7.2
+beautifulsoup4>=4.12.3
+certifi>=2023.11.17
+charset-normalizer>=3.3.2
+chex>=0.1.85
+click>=8.1.7
+colorama>=0.4.6
+contourpy>=1.2.0
+cycler>=0.12.1
+distlib>=0.3.8
+Django>=5.0.1
+etils>=1.6.0
+filelock>=3.13.1
+flax>=0.8.0
+fonttools>=4.47.2
+fsspec>=2023.12.2
+huggingface-hub>=0.20.3
+idna>=3.6
+importlib-resources>=6.1.1
+jax>=0.4.23
+jaxlib>=0.4.23
+Jinja2>=3.1.3
+joblib>=1.3.2
+kiwisolver>=1.4.5
+markdown-it-py>=3.0.0
+MarkupSafe>=2.1.4
+matplotlib>=3.8.2
+mdurl>=0.1.2
+ml-dtypes>=0.3.2
+mpmath>=1.3.0
+msgpack>=1.0.7
+mypy>=1.9.0
+mypy-extensions>=1.0.0
+nest-asyncio>=1.6.0
+networkx>=3.2.1
+nltk>=3.8.1
+numpy>=1.26.3
+opt-einsum>=3.3.0
+optax>=0.1.8
+orbax-checkpoint>=0.5.2
+packaging>=23.2
+pandas>=2.2.0
+pillow>=10.2.0
+pipenv>=2023.11.17
+platformdirs>=4.1.0
+protobuf>=4.25.2
+Pygments>=2.17.2
+pyparsing>=3.1.1
+PyPDF2>=3.0.1
+python-dateutil>=2.8.2
+pytz>=2023.3.post1
+PyYAML>=6.0.1
+regex>=2023.12.25
+requests>=2.31.0
+rich>=13.7.0
+sacremoses>=0.1.1
+safetensors>=0.4.2
+scipy>=1.12.0
+sentencepiece>=0.1.99
+setuptools>=69.2.0
+six>=1.16.0
+soupsieve>=2.5
+sqlparse>=0.4.4
+sympy>=1.12
+tensorstore>=0.1.52
+tokenizers>=0.15.1
+toolz>=0.12.1
+torch>=2.2.0.dev20231204+cu118
+torchaudio>=2.2.0.dev20231204+cu118
+torchvision>=0.17.0.dev20231204+cu118
+tqdm>=4.66.1
+transformers>=4.37.1
+typing_extensions>=4.9.0
+tzdata>=2023.4
+urllib3>=2.1.0
+virtualenv>=20.25.0
+wheel>=0.42.0
+zipp>=3.17.0
